--- a/index.html
+++ b/index.html
@@ -13,116 +13,178 @@
     --peach:#ffe5d4;
     --title:#c05b4d;
     --btn:#ff9f8c;
-    --card-shadow: rgba(230,154,138,0.45);
     --pastel-pink:#ffd8e8;
     --pastel-purple:#cdb7ff;
   }
 
-  /* Reset + prevent horizontal scroll */
   *{ box-sizing:border-box; -webkit-tap-highlight-color: transparent; }
-  html,body{ height:100%; margin:0; padding:0; background:var(--peach); font-family:"Poppins",system-ui,Segoe UI,Roboto,"Helvetica Neue",Arial; -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale; overflow-x:hidden; }
+  html,body{
+    height:100%;
+    margin:0;
+    background:var(--peach);
+    font-family:"Poppins",sans-serif;
+    overflow-x:hidden;
+  }
 
-  /* Pages */
-  .page{ display:none; height:100vh; width:100vw; padding:28px 22px; position:relative; overflow:hidden; text-align:center; }
+  .page{
+    display:none;
+    height:100vh;
+    width:100vw;
+    padding:28px 22px;
+    position:relative;
+    overflow:hidden;
+    text-align:center;
+  }
   .active{ display:block; }
 
-  /* global decorative layer behind content */
-  .global-decor { position:absolute; inset:0; z-index:0; pointer-events:none; }
+  .global-decor{
+    position:absolute;
+    inset:0;
+    z-index:0;
+    pointer-events:none;
+  }
 
-  h1{ color:var(--title); font-size:34px; margin:6px 0 8px; font-weight:700; position:relative; z-index:3; }
-  .emoji{ font-size:56px; margin-bottom:10px; position:relative; z-index:3; }
+  h1{
+    color:var(--title);
+    font-size:34px;
+    font-weight:700;
+    margin:6px 0 8px;
+    z-index:3;
+    position:relative;
+  }
+  .emoji{
+    font-size:56px;
+    margin-bottom:10px;
+    z-index:3;
+    position:relative;
+  }
 
-  /* stronger, opaque card so text always readable */
   .card-box{
-    background: rgba(255,255,255,0.98);
-    margin:18px auto;
-    padding:20px;
-    border-radius:14px;
+    background:rgba(255,255,255,0.98);
     max-width:820px;
+    padding:20px;
+    margin:18px auto;
+    border-radius:14px;
     box-shadow:0 18px 36px rgba(0,0,0,0.08);
-    text-align:center;
     position:relative;
     z-index:4;
   }
-  .btn{ background:var(--btn); border:none; color:#fff; padding:12px 24px; border-radius:14px; font-size:18px; cursor:pointer; }
 
-  .subtitle{ color:#975044; font-size:18px; margin-bottom:12px; position:relative; z-index:3; }
-
-  /* HEART RAIN (first slide) */
-  .heart-rain{ position:absolute; inset:0; pointer-events:none; z-index:2; overflow:hidden; }
-  .heart{ position:absolute; top:-5%; will-change:transform,opacity; animation-name:fall,sway,fadeInSmall; animation-timing-function:linear,ease-in-out,ease-in; animation-iteration-count:infinite,infinite,1; }
-
-  @keyframes fall{ to{ transform: translateY(120vh); } }
-  @keyframes sway{ 0%{ transform:translateX(0) } 50%{ transform:translateX(12px) } 100%{ transform:translateX(0) } }
-  @keyframes fadeInSmall{ from{ opacity:0; transform:scale(.9) } to{ opacity:.95; transform:scale(1) } }
-
-  .muted-medium{ font-size:20px; color:var(--pastel-purple); font-weight:600; margin-top:6px; position:relative; z-index:3; }
-
-  .pastel-pink-desc{ background:var(--pastel-pink); padding:14px; border-radius:12px; display:inline-block; text-align:left; color:#6b2f38; font-size:17px; max-width:820px; margin-top:14px; position:relative; z-index:4; }
-
-  /* cursive paragraph for slide 4 */
-  .cursive {
-    font-family: "Brush Script MT", "Lucida Handwriting", "Segoe Script", cursive, serif;
+  .btn{
+    background:var(--btn);
+    border:none;
+    color:#fff;
+    padding:12px 24px;
+    border-radius:14px;
     font-size:18px;
-    color:#000;
+    cursor:pointer;
+  }
+
+  .subtitle{
+    color:#975044;
+    font-size:18px;
+    margin-bottom:12px;
+    z-index:3;
+    position:relative;
+  }
+
+  /* Heart Rain */
+  .heart-rain{
+    position:absolute;
+    inset:0;
+    overflow:hidden;
+    z-index:2;
+  }
+  .heart{
+    position:absolute;
+    top:-5%;
+    animation-name:fall,sway,fadeInSmall;
+    animation-iteration-count:infinite,infinite,1;
+    animation-timing-function:linear,ease-in-out,ease-in;
+  }
+  @keyframes fall{ to{ transform:translateY(120vh);} }
+  @keyframes sway{ 0%{transform:translateX(0);} 50%{transform:translateX(12px);} 100%{transform:translateX(0);} }
+  @keyframes fadeInSmall{ from{opacity:0;transform:scale(.9);} to{opacity:.95;transform:scale(1);} }
+
+  .muted-medium{
+    font-size:20px;
+    color:var(--pastel-purple);
+    font-weight:600;
+    margin-top:6px;
+    z-index:3;
+    position:relative;
+  }
+
+  .pastel-pink-desc{
+    background:var(--pastel-pink);
+    padding:14px;
+    border-radius:12px;
+    font-size:17px;
     text-align:left;
-    line-height:1.7;
+    max-width:820px;
+    margin-top:14px;
+    color:#6b2f38;
+    z-index:4;
+    position:relative;
+  }
+
+  /* NEW CURSIVE MESSAGE */
+  .cursive{
+    font-family:"Brush Script MT","Lucida Handwriting","Segoe Script",cursive;
+    font-size:19px;
+    line-height:1.55;
+    color:#000;
     white-space:pre-wrap;
     margin:0;
-    padding:0 6px;
-    position:relative;
-    z-index:4;
+    padding:0 4px;
   }
 
-  /* decoration items (emoji) used across the page */
-  .decor-item {
+  .decor-item{
     position:absolute;
     pointer-events:none;
     user-select:none;
-    transform-origin:center center;
-    will-change:transform,opacity;
   }
 
   @media(max-width:600px){
     h1{ font-size:26px; }
     .emoji{ font-size:44px; }
-    .card-box{ padding:16px; }
   }
 </style>
 </head>
+
 <body>
 
-<!-- Decorations layer -->
-<div id="decorLayer" class="global-decor" aria-hidden="true"></div>
+<!-- Background Decorations -->
+<div id="decorLayer" class="global-decor"></div>
 
 <!-- PAGE 1 -->
 <div id="page1" class="page active">
-  <div class="heart-rain" id="heartRain"></div>
+  <div id="heartRain" class="heart-rain"></div>
 
-  <div class="emoji" aria-hidden="true">🎈🎉🌸🎂</div>
+  <div class="emoji">🎈🎉🌸🎂</div>
   <h1 id="title">Wishing You Happpiii Birthdayyyy Nidhi 🎈</h1>
 
-  <p class="subtitle content-on-top">A little surprise waiting for you. Hope you'll like it.</p>
+  <p class="subtitle">A little surprise waiting for you. Hope you'll like it.</p>
 
-  <div class="card-box content-on-top">
-    <p style="margin:6px 0 12px 0;">Open the surprise and enjoy ✨</p>
+  <div class="card-box">
+    <p>Open the surprise and enjoy ✨</p>
     <button class="btn" onclick="nextPage()">Open Surprise 🎁</button>
   </div>
 </div>
 
 <!-- PAGE 2 -->
 <div id="page2" class="page">
-  <div class="content-on-top">
-    <h1>Just For You 💐🎂</h1>
+  <h1>Just For You 💐🎂</h1>
 
-    <div class="muted-medium">Congratulations on your 19 or 20th birthday, I don't know your real age, so kindly adjust it 😅</div>
-
-    <div class="pastel-pink-desc card-box">
-      May your birthday be sprinkled with warm sunshine, easy giggles, and those soft little smiles that show up without warning and make your whole day glow. And may this special day whisper to you gently but adorably that the world feels a tiny bit sweeter just because you’re in it. 💛
-    </div>
-
-    <button class="btn" style="margin-top:14px;" onclick="nextPage()">Next ➜</button>
+  <div class="muted-medium">
+    Congratulations on your 19 or 20th birthday, I don't know your real age, so kindly adjust it 😅
   </div>
+
+  <div class="pastel-pink-desc card-box">
+    May your birthday be sprinkled with warm sunshine, easy giggles, and those soft little smiles that show up without warning and make your whole day glow. And may this special day whisper to you gently but adorably that the world feels a tiny bit sweeter just because you’re in it. 💛
+  </div>
+
+  <button class="btn" onclick="nextPage()" style="margin-top:14px;">Next ➜</button>
 </div>
 
 <!-- PAGE 3 -->
@@ -130,10 +192,12 @@
   <div class="emoji">🧙🏻🤞🏻</div>
   <h1>Make a Wish ✨</h1>
 
-  <div class="card-box content-on-top" style="text-align:left;">
-    <p style="font-weight:600; margin-bottom:10px;">I may not know what you’re wishing for, but I really hope the thing your heart is asking for reaches you soon. 🌷</p>
+  <div class="card-box" style="text-align:left;">
+    <p style="font-weight:600;margin-bottom:10px;">
+      I may not know what you’re wishing for, but I really hope the thing your heart is asking for reaches you soon. 🌷
+    </p>
 
-    <p style="margin:0 0 12px 0;">
+    <p>
       Close your eyes for a moment and make a small wish, the kind that quietly sits in your heart. Let it float out into the world, nice and easy. And I really hope it finds you today, in the simplest, sweetest way… and keeps bringing little moments of happiness your way for a long, long time. 🤞🏻🩷
     </p>
 
@@ -141,108 +205,105 @@
   </div>
 </div>
 
-<!-- PAGE 4 -->
+<!-- PAGE 4 (UPDATED MESSAGE) -->
 <div id="page4" class="page">
   <div class="emoji">💌</div>
   <h1>This is a small message from me 💌</h1>
 
-  <div class="card-box content-on-top" style="text-align:left;">
-    <!-- trimmed leading whitespace and set margin:0 above in CSS -->
-    <p class="cursive">First of all, a very happy, happy birthday to you, Nidhi. You’ve probably forgotten me by now, but this is just a small gift from my side, something I hope brings a little smile to your face. I won’t say much, but wherever you are, I genuinely wish you happiness. Enjoy your special day… and your life too. I didn’t add any photos of us because we don’t really have any special pictures or memories together, and I even thought about taking a picture from your Instagram, but it felt like invading your privacy, so I chose not to. I just hope you’ll like this small gesture, and even if we don’t talk much anymore, I still wish that kindness and good things keep finding you. Take care, and have a beautiful birthday. ^_^</p>
+  <div class="card-box" style="text-align:left;">
 
-    <p style="text-align:center; font-weight:700; margin-top:12px;">Once again Happy Birthday Nidhi 🩷</p>
+    <p class="cursive">
+First of all, a Very Happy, Happy Birthday to you, Nidhi. You’ve probably forgotten me by now, but this is just a small gift from my side, something I hope brings a little smile to your face. I won’t say much, but wherever you are, I genuinely wish you happiness. Enjoy your special day… and your life too.
+
+I didn’t add any photos of us because we don’t really have any special pictures or memories together, and I even thought about taking a picture from your Instagram, but it felt like invading your privacy, so I chose not to.
+
+Also this is my first birthday card and I don't know too much — even if there is some mistake just ignore it like you ignore your DMs.
+
+About this cursive message… I wrote it that way because I got a little nervous while typing and I thought it might be hard for you to read, and you might leave it midway, but to be honest I really didn't want that.
+
+I just hope you’ll like this small gesture, and even if we don’t talk much anymore, I still wish that kindness and good things keep finding you.
+
+Take care, and Once again have a beautiful birthday Nidhi 🩷. ^_^
+    </p>
+
   </div>
 </div>
 
 <script>
-/* name param */
+/* name */
 const params = new URLSearchParams(window.location.search);
-const name = params.get('name') || 'Nidhi';
-document.getElementById('title').innerText = `Wishing You Happpiii Birthdayyyy ${name} 🎈`;
+const name = params.get("name") || "Nidhi";
+document.getElementById("title").innerText =
+  `Wishing You Happpiii Birthdayyyy ${name} 🎈`;
 
 /* page control */
 let page = 1;
 function nextPage(){
   if(page === 1) stopHeartRain();
-  document.getElementById('page' + page).classList.remove('active');
+  document.getElementById("page"+page).classList.remove("active");
   page++;
-  if(!document.getElementById('page' + page)) page = 4;
-  document.getElementById('page' + page).classList.add('active');
+  if(!document.getElementById("page"+page)) page = 4;
+  document.getElementById("page"+page).classList.add("active");
 }
 
-/* Heart rain on first slide */
-const heartContainer = document.getElementById('heartRain');
-let heartInterval = null;
-const heartEmojis = ['💜','💛','💙','❤','💚'];
+/* Heart Rain */
+const heartContainer = document.getElementById("heartRain");
+let heartInterval=null;
+const heartEmojis=['💜','💛','💙','❤','💚'];
 
-function randomBetween(min,max){ return Math.random()*(max-min)+min; }
+function randomBetween(a,b){return Math.random()*(b-a)+a;}
 
 function createHeart(){
-  const s = document.createElement('span');
-  s.className = 'heart';
-  s.innerText = heartEmojis[Math.floor(Math.random()*heartEmojis.length)];
-  const leftPct = randomBetween(5,95);
-  s.style.left = leftPct + 'vw';
-  const size = Math.floor(randomBetween(16,32));
-  s.style.fontSize = size + 'px';
-  const duration = randomBetween(10,20);
-  s.style.animationDuration = `${duration}s, ${randomBetween(3,6)}s, 0.6s`;
-  s.style.opacity = (randomBetween(.75,1)).toString();
-  s.style.zIndex = 2;
-  heartContainer.appendChild(s);
-  setTimeout(()=>{ if(s && s.parentNode) s.remove(); }, (duration+1)*1000);
+  const h=document.createElement("span");
+  h.className="heart";
+  h.innerText=heartEmojis[Math.floor(Math.random()*heartEmojis.length)];
+  h.style.left=randomBetween(5,95)+'vw';
+  const size=randomBetween(16,32);
+  h.style.fontSize=size+'px';
+  const d=randomBetween(10,20);
+  h.style.animationDuration=`${d}s, ${randomBetween(3,6)}s, .6s`;
+  h.style.opacity=randomBetween(.75,1);
+  h.style.zIndex=2;
+  heartContainer.appendChild(h);
+  setTimeout(()=>{h.remove();},(d+1)*1000);
 }
 
 function startHeartRain(){
-  for(let i=0;i<8;i++) setTimeout(createHeart, i*300);
-  if(!heartInterval){
-    heartInterval = setInterval(()=>{
-      const n = Math.random()>0.6 ? 2 : 1;
-      for(let i=0;i<n;i++) createHeart();
-    }, 700);
-  }
+  for(let i=0;i<8;i++) setTimeout(createHeart,i*300);
+  heartInterval=setInterval(()=>{
+    const n=Math.random()>0.6?2:1;
+    for(let i=0;i<n;i++) createHeart();
+  },700);
 }
+
 function stopHeartRain(){
-  if(heartInterval){ clearInterval(heartInterval); heartInterval = null; }
-  document.querySelectorAll('#heartRain .heart').forEach(h=>h.remove());
+  clearInterval(heartInterval);
+  document.querySelectorAll(".heart").forEach(h=>h.remove());
 }
-window.addEventListener('load', ()=>{
-  if(document.getElementById('page1').classList.contains('active')) startHeartRain();
-});
 
-/* Global decorative background across all pages (chocolate, balloons, hearts).
-   Reduced the opacity range so decorations are visible but not intrusive.
-*/
-const decorChars = ['🍫','🎈','❤️','💚','💙','💜','💛'];
-const decorLayer = document.getElementById('decorLayer');
+window.onload=()=>startHeartRain();
 
-function addDecor(count = 40){
-  decorLayer.innerHTML = '';
-  for(let i=0;i<count;i++){
-    const el = document.createElement('div');
-    el.className = 'decor-item';
-    const left = Math.random() * 100; // percent
-    const top = Math.random() * 100;  // percent
-    el.style.left = left + '%';
-    el.style.top = top + '%';
-    el.style.transform = 'translate(-50%,-50%) rotate(' + (Math.floor(Math.random()*60)-30) + 'deg)';
-    const size = Math.floor(Math.random()*46) + 22; // 22 - 68 px
-    el.style.fontSize = size + 'px';
-    // LOWER opacity (subtle): 0.06 - 0.22
-    el.style.opacity = (Math.random() * 0.16 + 0.06).toString();
-    el.style.zIndex = 0;
-    el.innerText = decorChars[Math.floor(Math.random()*decorChars.length)];
-    decorLayer.appendChild(el);
+/* global decorations */
+const decorChars=['🍫','🎈','❤️','💚','💙','💜','💛'];
+const decorLayer=document.getElementById("decorLayer");
+
+function addDecor(n=44){
+  decorLayer.innerHTML="";
+  for(let i=0;i<n;i++){
+    const d=document.createElement("div");
+    d.className="decor-item";
+    d.innerText=decorChars[Math.floor(Math.random()*decorChars.length)];
+    d.style.left=Math.random()*100+'%';
+    d.style.top=Math.random()*100+'%';
+    d.style.transform=`translate(-50%,-50%) rotate(${Math.random()*60-30}deg)`;
+    d.style.fontSize=(22+Math.random()*46)+'px';
+    d.style.opacity=(0.06+Math.random()*0.16).toString();
+    decorLayer.appendChild(d);
   }
 }
-
-// initial call and on resize
-addDecor(44);
-window.addEventListener('resize', ()=> addDecor(44));
-
-/* ensure no element keeps focus (avoid outlines / accidental scroll focus) */
-window.addEventListener('click', ()=>{ document.activeElement && document.activeElement.blur && document.activeElement.blur(); });
-
+addDecor();
+window.onresize=()=>addDecor();
 </script>
+
 </body>
 </html>
